--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cloudinary": "^2.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "leaflet": "^1.9.4",
     "lowdb": "^7.0.1",
     "lucide-react": "^0.563.0",
+    "multer": "^2.0.2",
     "nanoid": "^5.1.0",
     "pg": "^8.13.1",
     "react": "^19.2.4",
@@ -25,8 +27,8 @@
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "concurrently": "^9.1.2",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.2",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2",
